--- a/style/stylehome.css
+++ b/style/stylehome.css
@@ -1,45 +1,90 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    align-items: center;
     background-color: #cee1f4;
+    height: 100vh;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.title {
+.title-containerFlex {
+    display: flex;
+    flex-direction: column;
     text-align: center;
+    justify-content: center;
+    width: 100%;
     font-size: 40px;
-    font-family: monospace;
 }
 
-#menu {
+.title-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 60px 0 50px 0;
+}
+
+.title-container h1 {
+    color: #313131;
+}
+
+.paragraph-container {
+    display: flex;
+    justify-content: center;
+    
+}
+
+.paragraph-container p {
+    font-size: 40px;
+    color: #313132;
+}
+
+.menu {
+    display: flex;
+    flex-flow: column;
     margin-top: 40px;
+    width: 666px;
 }
 
-#menu ul {
+.menu ul {
+    display: flex;
+    justify-content: space-around;
     margin: 0px;
     padding: 0px;
     list-style: none;
-    float: left;
-    width: 100%;
     text-align: center;
 }
 
-#menu ul li {
-    display: inline;
-      
+.menu ul li {
+    display: flex;
+    font-size: 12px;
+    transition: 3ms;
 }
 
-#menu ul li a {
+.menu ul li a {
     padding: 2px 10px;
-    display: inline-block;
-    font-size: 25px;
+    display: flex;
+    align-items: center;
+    border-radius: 5px 5px 0px 0px;
+    justify-content: center;
+    height: 40px;
+    width: 90px;
 
     /*Visual do Menu*/
     background-color: rgb(148, 148, 148);
     color: black;
     text-decoration: none;
     border-bottom: 3px solid #ededed;
+    transition: 0.2s;
 }
 
-#menu ul li a:hover {
+.menu ul li a:hover {
     background-color: #d6d6d6;
     color: #6d6d6d;
     border-bottom: 3px solid #8FBCE6;
@@ -48,13 +93,12 @@ body {
 .video {
     text-align: center;
     padding: 70px;
-    font-size: 25px;
-    font-family: monospace;
 }
 
-#second_title {
-    font-size: 50px;
-    font-family: monospace;
+.video .para {
+    margin-bottom: 50px;
+    font-size: 40px;
+    color: #313132;
 }
 
 .address {
